--- a/client/src/styling/Message.css
+++ b/client/src/styling/Message.css
@@ -1,7 +1,61 @@
-.profbox{
-    display: flex;
-    justify-content: center;
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    
+    
 }
-.messageContain{
-    margin-left: 400px;
+
+.messagesPage {
+    display: flex;
+    height: 100vh;
+  
+}
+
+.sidebar {
+    width: 25%;
+    padding: 20px;
+    border-right: 1px solid #ddd;
+   
+}
+
+.user {
+    padding: 15px;
+    margin: 15px 0;
+   background-color: ;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.user:hover {
+    background-color: #e0e0e0;
+}
+
+.chat {
+    width: 85%;
+    padding: 20px;
+}
+
+.messageContain {
+    padding: 20px;
+    background-color: #f9f9f9;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: 90vh;
+    width: 58vw;
+}
+
+.profbox {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.post {
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+  
 }
