--- a/client/src/styling/Profile.css
+++ b/client/src/styling/Profile.css
@@ -1,16 +1,57 @@
-.profileContain{
-margin-left: 400px;
+
+.profilePicture {
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  margin-bottom: 20px;
+  background-color: white;
+}
+.username{
+ 
+  margin-top: 50px;
+  margin-left: 20px;
+  font-size: 2em;
+
 }
 
-.post{
-    /* background-color: #0181B0  ; */
-height: 250px;
-width: 250px;
-border:3px solid #0181B0 ;
-box-shadow: 3px 5px 8px;
-
+.post {
+  background: rgba(255, 255, 255, 0.1);
+  height: 350px;
+  width: 350px;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  margin-bottom: 20px;
 }
-.top{
+.postWord{
+  margin-left: 45%;
+  
+}
+
+
+.profileContain { 
+    min-height: 100vh;
+    color: white;
+    padding: 20px;
+    
+  }
+  
+  .top {
+    margin-bottom: 30px;
+    display:flex;
+    margin-left:45%;
+    
+  }
+ 
+ 
+  
+  
+  .postsSection {
+    
     display: flex;
-    justify-content: center;
-}
+    flex-wrap: wrap;
+    justify-content: space-around;
+  
+  }
+  
+  
