--- a/client/src/styling/Message.css
+++ b/client/src/styling/Message.css
@@ -1,11 +1,12 @@
 .message-container {
     display: flex;
     flex-direction: column;
-    height: 100%;
-    padding: 10px;
+    height: 80vh;
+    margin: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f9f9f9;
+    
 }
 
 .messages-list {
