--- a/client/src/styling/Message.css
+++ b/client/src/styling/Message.css
@@ -72,3 +72,10 @@
 .message-input button:hover {
     background-color: #0056b3;
 }
+
+.Message-Profile-Img{
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    margin-right: 20px;
+}
