--- a/client/src/styling/Profile.css
+++ b/client/src/styling/Profile.css
@@ -7,8 +7,7 @@
   background-color: white;
 }
 .username{
- 
-  margin-top: 50px;
+
   margin-left: 20px;
   font-size: 2em;
 
@@ -54,4 +53,11 @@
   
   }
   
-  
+  .Profile-Message-Btn{
+    padding: 10px 20px;
+    border: none;
+    background-color: #007bff;
+    color: white;
+    border-radius: 5px;
+    margin-left: 20px;
+  }
